--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-<!-- Mirrored from apkz.xyz/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 09 Apr 2021 16:34:09 GMT -->
-
-<!-- Mirrored from thebesttools.xyz/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 22 Oct 2021 11:00:47 GMT -->
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
@@ -215,8 +211,10 @@
                                     <span> Time Left : </span>
                                     </div>
                                     <p id="time" style=" font-weight: bold;"></p>
-								<div class="button-wrapper">
-										<a href="https://verifysuper.com/cl/i/lkr4nj"><div id="b-1" class="button animated pulse infinite"><span class="lnr lnr-download"></span><span>Final Step</span></div></a>
+									<div class="button-wrapper">
+										<a <a type="button" class="button animated pulse infinite" id="verify-button" onclick="og_load();"> VERIFY (Click Here) </a>
+
+
 </div>
 
 								</div>
